@@ -1,5 +1,8 @@
 2011-02-08  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
+	* include/solver/ChoicePoint.h: Fix mismatch type between SAT and Router.
+	* src/solver/RelSatSolver.cpp: Likewise.
+
 	* src/network/OutputThread.cpp: Fix sending back in case of EOF.
 
 	* src/dmcs/StreamingDMCS.cpp: Swap order of interrupt and send
